<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Final Year Project Assesment</string>
    <string name="copyright"> &#169; Stefana - Alexia Stelea</string>
    <string name="login">Login</string>
    <string name="addproject">Add project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="none"></string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="id">ID</string>
    <string name="username">Username</string>
    <string name="usertype">User type</string>
    <string name="wrong_login">Wrong credentials! Please try again.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="status">Status</string>

</resources>