<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_white" >

    <TableLayout
       
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/dark_white"
        android:padding="15dp"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_height="50dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/name"
                android:textColor="@color/blue1"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview_project_name"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/none"
                android:textSize="24sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_height="50dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/description"
                android:textColor="@color/blue1"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview_project_description"
                android:layout_width="100dp"
                android:layout_column="1"
                android:height="100dp"
                android:padding="3dip"
                android:scrollHorizontally="false"
                android:text="@string/none"
                android:textSize="24sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_height="50dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/status"
                android:textColor="@color/blue1"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview_project_status"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/none"
                android:textSize="24sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@layout/footer_repeat"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.37"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/copyright"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>