<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_white" >

        <!-- Header  Starts -->


        <!-- <LinearLayout -->
        <!-- android:id="@+id/header" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:background="@layout/header_gradient" -->
        <!-- android:paddingBottom="5dip" -->
        <!-- android:paddingTop="5dip" > -->


        <!-- Logo Start -->


        <!-- <ImageView -->
        <!-- android:layout_width="50dp" -->
        <!-- android:layout_height="50dp" -->
        <!-- android:contentDescription="@string/none" -->
        <!-- android:src="@drawable/_logo" /> -->


        <!-- <TextView -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginLeft="10dip" -->
        <!-- android:padding="10dp" -->
        <!-- android:text="@string/app_name" -->
        <!-- android:textColor="@color/white" /> -->
        <!-- Logo Ends -->
        <!-- </LinearLayout> -->
        <!-- Header Ends -->
        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="0.37"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/copyright"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- android:layout_below="@id/header" -->


            <!-- Email Label -->

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- Password Label -->

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Login button -->

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/blue1"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/login"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Login Form Ends -->
    </RelativeLayout>

</ScrollView>